syntax = "proto3";

package bankcard;

option go_package = "github.com/sbilibin2017/gophkeeper/pkg/grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message BankCardAddRequest {
  string secret_name = 1;
  string number = 2;
  string owner = 3;
  string exp = 4;
  string cvv = 5;
  map<string, string> meta = 6;
}

message BankCardFilterRequest {
  string secret_name = 1;
}

message BankCard {
  string secret_name = 1;
  string secret_owner = 2;
  string number = 3;
  string owner = 4;
  string exp = 5;
  string cvv = 6;
  map<string, string> meta = 7;
  google.protobuf.Timestamp updated_at = 8;
}

service BankCardService {
  rpc Add(BankCardAddRequest) returns (google.protobuf.Empty);
  rpc Get(BankCardFilterRequest) returns (BankCard);
  rpc List(google.protobuf.Empty) returns (stream BankCard);  
}
