syntax = "proto3";

package gophkeeper;

option go_package = "pkg/grpc";

// Пустое сообщение
message Empty {}

// Структура банковской карты
message SecretBankCard {
  string secret_name = 1;
  string owner = 2;
  string number = 3;
  string exp = 4;
  string cvv = 5;
  string meta = 6;
  string updated_at = 7;
}

// Запрос на получение списка
message SecretBankCardListRequest {
  string token = 1;
}

// Ответ со списком банковских карт
message SecretBankCardListResponse {
  repeated SecretBankCard items = 1;
}

// Сервис управления банковскими картами
service SecretBankCardService {
  rpc ListBankCards(SecretBankCardListRequest) returns (SecretBankCardListResponse);
}
